<resources>
    <string name="app_name">CashFlow</string>
    <string name="titulo_upper_toolbar">REGISTRAR MOVIMIENTO</string>
    <string name="vermovimientos_mayuscula">VER MOVIMIENTOS</string>
    <string name="cuentas_mayuscula">CUENTAS:</string>
    <string name="mov_tipo_uno">Ingreso</string>
    <string name="mov_tipo_dos">Egreso</string>
    <string name="mov_tipo_tres">Movimiento</string>
    <string name="hint_observaciones">Observaciones</string>
    <string name="hint_monto">Monto</string>
    <string name="hint_fecha">Seleccione la fecha</string>
    <string name="titulo_op_movimientos">SELECCIONE SU CUENTA:</string>
    <string name="naturaleza">NATURALEZA:</string>
    <string name="departamento">DEPARTAMENTO:</string>
    <string name="caregoria">CATEGORIA:</string>
    <string name="concepto">CONCEPTO:</string>
    <string name="nav_usuario">Usuario</string>
    <string name="nav_movimientos">Movimientos</string>
    <string name="Movimientos_mayus">MOVIMIENTOS</string>
    <string name="nav_reportes">Reportes</string>
    <string name="nav_registro">Registrar Movimiento</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_contra">Contraseña</string>
    <string name="ingreso">ENTRAR</string>
    <string name="titulo_balance">BALANCE</string>
    <string name="ingreso_google">O INGRESA CON TU CUENTA GOOGLE:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>